--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,9 +7,15 @@
     msg: "Please provide the target_response_file_path"
 
 - name: Copy target response file to managment server
-  copy:
+  fetch:
     src: "{{ target_response_file_path }}"
+    dest: "{{ local_apigee_secure_path }}/{{ target_response_file_path | basename }}"
+
+- name: Copy target_response file to management server
+  copy:
+    src: "{{ local_apigee_secure_path }}/{{ target_response_file_path | basename }}"
     dest: "{{ target_response_file_path }}"
+  delegate_to: "{{ ms_ip }}"
 
 - name: Setup component with target response file
   shell: "{{ apigee_service }} edge-management-server apigee-registration-setup -f {{ target_response_file_path }}"
