--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -17,7 +17,7 @@
 - name: Copy target response file to control server
   fetch:
     src: "{{ target_response_file_path }}"
-    dest: "{{ local_apigee_secure_path }}"
+    dest: "{{ local_apigee_secure_path }}/"
     flat: true
 
 - name: Copy target response file control server to management server
