--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,15 +6,6 @@
       - target_response_file_path is defined
     msg: "Please provide the target_response_file_path"
 
-- debug:
-    var: target_response_file_path
-
-- debug:
-    var: target_response_file_path | basename
-
-- debug:
-    var: local_apigee_secure_path
-
 - name: Copy target response file to control server
   fetch:
     src: "{{ target_response_file_path }}"
@@ -25,10 +16,10 @@
   copy:
     src: "{{ local_apigee_secure_path }}/{{ target_response_file_path | basename }}"
     dest: "{{ target_response_file_path }}"
-  delegate_to: "{{ ms_ip }}"
+  delegate_to: "{{ local_mgmt_ip }}"
 
 - name: Setup component with target response file
   shell: "{{ apigee_service }} edge-management-server apigee-registration-setup -f {{ target_response_file_path }}"
-  delegate_to: "{{ ms_ip }}"
+  delegate_to: "{{ local_mgmt_ip }}"
 
 
