--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,9 +13,12 @@
     flat: true
 
 - name: Copy target response file control server to management server
+  become: true
   copy:
     src: "{{ local_apigee_secure_path }}/{{ target_response_file_path | basename }}"
     dest: "{{ target_response_file_path }}"
+    owner: "{{ opdk_user_name }}"
+    group: "{{ opdk_user_group }}"
   delegate_to: "{{ local_mgmt_ip }}"
 
 - name: Setup component with target response file
