--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,17 +12,35 @@
     dest: "{{ local_apigee_secure_path }}/"
     flat: true
 
-- name: Copy target response file control server to management server
-  become: true
-  copy:
-    src: "{{ local_apigee_secure_path }}/{{ target_response_file_path | basename }}"
-    dest: "{{ target_response_file_path }}"
-    owner: "{{ opdk_user_name }}"
-    group: "{{ opdk_group_name }}"
-  delegate_to: "{{ local_mgmt_ip }}"
+- block:
 
-- name: Setup component with target response file
-  shell: "{{ apigee_service }} edge-management-server apigee-registration-setup -f {{ target_response_file_path }}"
-  delegate_to: "{{ local_mgmt_ip }}"
+  - name: Copy target response file control server to management server
+    become: true
+    copy:
+      src: "{{ local_apigee_secure_path }}/{{ target_response_file_path | basename }}"
+      dest: "{{ target_response_file_path }}"
+      owner: "{{ opdk_user_name }}"
+      group: "{{ opdk_group_name }}"
+    delegate_to: "{{ local_mgmt_ip }}"
 
+  - name: Setup component with target response file
+    shell: "{{ apigee_service }} edge-management-server apigee-registration-setup -f {{ target_response_file_path }}"
+    delegate_to: "{{ local_mgmt_ip }}"
+
+  when: local_mgmt_ip != private_address
+
+- block:
+
+  - name: Copy target response file control server to management server
+    become: true
+    copy:
+      src: "{{ local_apigee_secure_path }}/{{ target_response_file_path | basename }}"
+      dest: "{{ target_response_file_path }}"
+      owner: "{{ opdk_user_name }}"
+      group: "{{ opdk_group_name }}"
+
+  - name: Setup component with target response file
+    shell: "{{ apigee_service }} edge-management-server apigee-registration-setup -f {{ target_response_file_path }}"
+
+  when: local_mgmt_ip == private_address
 
